# pp02

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  server.py
apis/models/: ask.py  chat.py  intent.py  meilisearch.py
apis/v1/: chat_router.py  demo_router.py  intent_router.py  meilisearch_router.py
apis/v2/: demo_router.py  test.py
config/: categories.yml  contants.py  meilisearch_index_settings.py  settings.py
core/agents/prompts/: content.py
core/clients/: groq.py  meilisearch.py  openai.py
core/embedders/: embedder_1.py  embedder_1_legacy.py
core/logics/: chat.py  demo.py  meilisearch.py
core/utils/: config_loader.py  pdf_processor.py
